added ul element and font link

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>Rijksmuseum Query</title>
@@ -14,12 +15,26 @@
 </head>
 
 <body>
+    <nav id="navigation"></nav>
     <main class="container">
 
     </main>
 
 
-    <input type="text" id="usr-input">
+    <input type="text" id="usr-input" placeholder="Enter an Artist or Title of a Work" /><button>Submit</button>
+    <section class='container'>
+        <h4 class="center">Catch 'Em All!</h4>
+        <ul class="collection with-header">
+            <li class="collection-header">
+            </li>
+            <li class="collection-item red-text">
+                <div>Bulbasaur<span class="secondary-content blue-text">Detail</span></div>
+            </li>
+
+        </ul>
+    </section>
+
+    <footer></footer>
 
 </body>
 
