--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <title>Rijksmuseum Query</title>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script defer src="./js/config.js"></script>
     <script defer src="./js/script.js"></script>
 
 </head>
 
 <body>
-    <nav id="navigation"></nav>
+    <nav class="indigo darken-4" id="navigation"></nav>
     <main class="container">
 
     </main>
@@ -23,12 +24,12 @@
 
     <input type="text" id="usr-input" placeholder="Enter an Artist or Title of a Work" /><button>Submit</button>
     <section class='container'>
-        <h4 class="center">Catch 'Em All!</h4>
+        <h4 class="center">Art Is Cool Yo!</h4>
         <ul class="collection with-header">
             <li class="collection-header">
             </li>
-            <li class="collection-item red-text">
-                <div>Bulbasaur<span class="secondary-content blue-text">Detail</span></div>
+            <li class="collection-item grey-darken-4-text">
+                <div>Artwork<span class="secondary-content grey-darken-4-text">Detail</span></div>
             </li>
 
         </ul>
