--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="indigo darken-4 grey-text" id="navigation">Rijksmuseum Art Viewer 3000</nav>
     <main class="large-container">
 
-        <div id="input-junk"><input type="text" id="usr-input" placeholder="Enter an Artist or Title of a Work" /><button id="submit">Submit</button>
+        <div id="input-junk"><input type="text" id="usr-input" placeholder="Enter a Title or Keyword" /><button id="submit">Submit</button>
         </div>
         <section id='small-container'>
             <h4 class="center">Art Is Cool Yo!</h4>
