added new font link and content

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>Rijksmuseum Query</title>
@@ -22,7 +22,7 @@
         <div id="input-junk"><input type="text" id="usr-input" placeholder="Enter a Title or Keyword" /><button id="submit">Submit</button>
         </div>
         <section id='small-container'>
-            <h4 class="center">Art Is Cool Yo!</h4>
+            <h4 class="center">Selected Works from the Rijksmuseum in Amsterdam</h4>
             <table class="responsive-table striped" id="art-table">
                 <thead>
                     <tr>
