removed placeholder innerHTML

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <nav class="indigo darken-4 grey-text" id="navigation">Rijksmuseum Art Viewer 3000</nav>
+    <nav class="indigo darken-4 grey-text" id="navigation">Rijksmuseum Art Viewer</nav>
     <main class="large-container">
 
         <div id="input-junk"><input type="text" id="usr-input" placeholder="Enter a Title or Keyword" /><button id="submit">Submit</button>
@@ -34,18 +34,16 @@
 
                 <tbody id="content">
                     <tr>
-                        <td id="lt-content">Long Title stuff goes here</td>
-                        <td id="artist-content">Artist stuff goes here</td>
-                        <td id="image-content">Image stuff goes here</td>
+                        <td id="lt-content"></td>
+                        <td id="artist-content"></td>
+                        <td id="image-content"></td>
                     </tr>
             </table>
 
         </section>
     </main>
 
-    <footer class="indigo darken-4 grey-text">This is a lovely footer
-
-    </footer>
+    <footer class="indigo darken-4 grey-text"></footer>
 
 </body>
 
