made slight changes to html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <nav class="indigo darken-4 grey-text" id="navigation">Rijksmuseum Art Viewer</nav>
+    <nav class="indigo darken-4 grey-text lighten-4" id="navigation">Rijksmuseum Art Viewer</nav>
     <main class="large-container">
 
         <div id="input-junk"><input type="text" id="usr-input" placeholder="Enter a Title or Keyword" /><button id="submit">Submit</button>
@@ -43,7 +43,7 @@
         </section>
     </main>
 
-    <footer class="indigo darken-4 grey-text"></footer>
+    <footer class="indigo darken-4 grey-text lighten-4">Welcome to the bottom of the page!</footer>
 
 </body>
 
