--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                             <td id="image-content"></td>
                         </tr>
                 </table>
+                <div class="grey lighten-5">
+
+                </div>
 
             </section>
         </div>
