--- a/index.html
+++ b/index.html
@@ -20,10 +20,14 @@
     <main id="large-container">
 
         <div class="container">
-            <div class="input-field" id="input-junk"><input type="text" id="usr-input" placeholder="Enter a Title or Keyword" /><button class="btn waves-effect waves-light teal lighten-3" type="submit" name="action" id="submit">Submit</button>
+            <div class="input-field" id="input-junk">
+                <input type="text" id="usr-input" placeholder="Enter a Title or Keyword">
+                <button class="btn waves-effect waves-light teal lighten-3" type="submit" name="action" id="submit">Submit</button>
             </div>
             <section id='small-container'>
-                <h4 class="center">Selected Works from the Rijksmuseum in Amsterdam</h4>
+                <h4 class="center">
+                    Selected Works from the Rijksmuseum in Amsterdam
+                </h4>
                 <table class="responsive-table striped" id="art-table">
                     <thead>
                         <tr>
